{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 3,
  "lineage": "3329c49a-d161-e23d-461d-712ddab63526",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686255974968:security-group/sg-0dea950418b6a12c7",
            "description": "Allow ssh and HTTP on all networks",
            "egress": [],
            "id": "sg-0dea950418b6a12c7",
            "ingress": [],
            "name": "allow-ssh-http",
            "name_prefix": "",
            "owner_id": "686255974968",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09db691bdff879418"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255974968",
            "id": "sg-0dea950418b6a12c7",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686255974968:security-group-rule/sgr-0b85327cee718fdc5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0b85327cee718fdc5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0dea950418b6a12c7",
            "security_group_rule_id": "sgr-0b85327cee718fdc5",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255974968",
            "id": "sgr-0b85327cee718fdc5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.allow_ssh_http"
          ]
        }
      ]
    }
  ]
}